deployment/backend/K8s/staging/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: scmy-studyconnect-staging # Namespace for the MSSQL service
  labels:
    app: mssql-server  # Label for the MSSQL Server Pod
spec:
  selector:
    app: mssql-server  # Label matching the MSSQL Server Pod
  ports:
  - protocol: TCP
    port: 1433       # Internal port for the service
    targetPort: 1433   # Port on the MSSQL Server container
