deployment/backend/K8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: scmy-studyconnect-staging
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080       # The port exposed by the service
      targetPort: 8080  # The port inside the backend container
  type: ClusterIP  # Keeps it internal to the cluster
