deployment/backend/K8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: kube-root-ca.crt # Replace with the name of your ClusterIssuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure # Tell Traefik to use the 'websecure' entrypoint (for HTTPS)
    traefik.ingress.kubernetes.io/router.tls: "true"      # Enable TLS on the router
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.scmy-studyconnect-staging.pm4.init-lab.ch
      secretName: backend-tls # Kubernetes Secret where the certificate will be stored
  rules:
    - host: api.scmy-studyconnect-staging.pm4.init-lab.ch
      http:
        paths:
          - backend:
              service:
                name: backend-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
